Update README. Update Postamn Collection. Fixed bugs.
